# mcp

python/: cookiecutter.json
python/oci-{{cookiecutter.project_domain | lower | replace(' ', '-') | replace('_', '-')}}-mcp-server/: README.md  pyproject.toml
python/oci-{{cookiecutter.project_domain | lower | replace(' ', '-') | replace('_', '-')}}-mcp-server/tests/: test_server.py
